2013-11-30  Rene Liebscher <R.Liebscher@gmx.de>

	bug #40748 linuxgpio doesn't work on Raspberry PI rev. 2.
	* linuxgpio.c: fixed check for unused pins to ignore the inverse flag 
	* pindefs.c: fixed fill_old_pinlist to not create an empty mask with inverse flag set

2013-10-18  Nils Springob <nils@nicai-systems.de>

        * avrdude.conf.in (atmega1284): ATmega1284 variant added (same as ATmega1284p but with different signature)

2013-09-25  Hannes Weisbach <hannes_weisbach@gmx.net>

	First part of patch #7720:
	* avrdude.conf.in: Add UM232H and C232H programmers

2013-09-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Daniel Rozsnyo:
	bug #40085: Typo fix in fuses report (for 6.1-svn-20130917)
	* main.c: Fix a typo.

2013-09-19  Hannes Weisbach <hannes_weisbach@gmx.net>

	task #12798: Please cleanup #ifdef notyet entries in avrftdi.c
	* avrftdi.c: ditto.
	avrftdi.c: Remove DRYRUN-option.

2013-09-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #40055: AVRDUDE segfaults when writing eeprom
	* main.c: Always clear the UF_AUTO_ERASE flag if either a
	non-Xmega device was found, or the programmer does not offer a
	page_erase method.

2013-09-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version to post-6.0.

2013-09-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version to 6.0.

2013-09-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c (jtag3_initialize): Fix a buffer overflow by limiting
	the flash page cache size to at most "readsize".  For Xmegas with
	a page size of 512 bytes, the maximum USB packet size was
	overflowed, and subsequently, a memmove copied beyond the end of
	the allocated buffer.
	* jtag3.c (jtag3_read_byte): Add the correct offset also for the
	various flash regions, so reading the apptable or boot regions
	yields the correct data.

2013-09-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Joakim Lubeck:
	bug #40040: Support for ATtiny20 and ATtiny40